Displayed data on site from DB & Added frontend pages in main site

--- a/public/css/shortcodes.css
+++ b/public/css/shortcodes.css
@@ -88,7 +88,7 @@
 .ttm-row.client-section{  padding: 28px 0 28px;}
 .ttm-row.fid-section{padding: 75px 0;}
 .ttm-row.gallery-section2{padding-top: 150px;}
-.ttm-row.service-process-section2{padding-top: 0;}
+/* .ttm-row.service-process-section2{padding-top: 0;} */
 .ttm-row.grid-blog-section,
 .ttm-row.last-section,
 .ttm-row.pricing-section{padding-bottom: 70px;}
